<resources>
    <string name="app_name">Bong#</string>
    <string name="login">로그인</string>
    <string name="password">비밀번호</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="OR">Or</string>
    <string name="phoneNumber">전화번호</string>
    <string name="nickName">닉네임</string>
    <string name="email">이메일</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="signUpDescription">혹시 회원이 아니신가요?</string>
    <string name="signUp">회원 가입</string>
    <string name="man">남</string>
    <string name="woman">여</string>
    <string name="cancel">취소</string>
    <string name="delete_post">게시글 삭제</string>
    <string name="update_post">게시글 수정</string>
    <string name="delete_comment">댓글 삭제</string>
    <string name="matching_success">매칭 완료</string>
    <string name="are_you_sure_you_want_to_success">정말 거래를 완료하시겠습니까?</string>
    <string name="update_comment">댓글 수정</string>
    <string name="delete_update">수정/삭제</string>
    <string name="delete_or_update">수정하거나 삭제할 수 있습니다.</string>
    <string name="anonymous_community">익명게시판</string>
    <string name="are_you_sure_you_want_to_delete">정말로 삭제할까요?</string>
    <string name="checkMyChatRoom">내가 채팅하고 있는 방 목록</string>
    <string name="checkThisPostChatRoom">채팅방 목록</string>
    <string name="title">제목</string>
    <string name="take">Take</string>
    <string name="arrow">⇨</string>
    <string name="give">Give</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="trading">교환 원해요!</string>
    <string name="send">Send</string>
    <string name="possibleTimeZone">가능한 시간대 : %s</string>
    <string name="possibleDays">가능한 날짜 : %s</string>
    <string name="trading_completed">교환 완료!</string>
    <string name="completed_exchange_post">거래 완료된 게시물</string>
    <string name="checkExchangePost">내가 쓴 재능교환</string>
    <string name="checkCommunityPost">내가 쓴 게시글</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="dawn">새벽</string>
    <string name="morning">아침</string>
    <string name="launch">점심</string>
    <string name="afternoon">오후</string>
    <string name="dinner">저녁</string>
    <string name="times">시간대(중복불가)</string>
    <string name="days">요일(중복불가)</string>
    <string name="Give">Give</string>
    <string name="Take">Take</string>
    <string name="do_signup">회원 가입하기</string>
    <string name="profile_temperature">나의 온도는 %s도에요.</string>
    <string name="userPost_temperature">작성자 온도 : %s</string>
    <string name="profile_userNickName">%s님</string>
    <string name="or">Or</string>
    <string name="update">수정</string>정
    <string name="doing_update">수정하기</string>
    <string name="are_you_sure_you_want_to_update">정말로 수정할까요?\n(이미지는 수정할 수 없어요.)</string>
    <string name="update_profile">프로필 수정</string>
    <string name="exchange_talent">재능 교환</string>
    <string name="exchange_talent_posting">재능 교환 게시물 등록</string>
    <string name="community_posting">커뮤니티 게시물 등록</string>
    <string name="community_updating">커뮤니티 게시물 수정</string>
    <string name="exchange_updating">재능교환 게시물 수정</string>
    <string name="anonymous">익명</string>
    <string name="date">2018년 5월 18일</string>
    <string name="see_name">이름 : %s</string>
    <string name="see_gender">성별 : %s</string>
    <string name="see_birth">생년월일 : %s</string>
    <string name="see_phoneNumber">전화번호 : %s</string>
    <string name="see_email">이메일 : %s</string>
    <string name="see_id">아이디 : %s</string>
    <string name="see_password">비밀번호 : %s</string>
    <string name="take_text">Take : %s • (%s)</string>
    <string name="give_text">Give : %s • (%s)</string>
    <string name="updating">정보 수정하기</string>
    <string name="yearMonthDay">생년월일</string>
    <string name="post_id_nickName">%s(%s)</string>
    <string name="address">주소</string>
    <string name="failed_to_load">불러오기에 실패했습니다.</string>
    <string name="fail_to_connect">연결에 실패하였습니다.</string>
    <string name="middle_dot">\u0020•\u0020</string>
    <string name="content">내용\n\n</string>
    <string name="empty">텅</string>
    <string name="retry">재시도</string>
    <string name="posting">등록하기</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="match_successed">완료</string>
    <string name="isMinePost">글쓴이(나)</string>
    <string name="input_comment">댓글 추가..</string>
    <string name="photo">사진은 3장까지 등록가능해요.\n사진은 추후에 수정이 불가능해요.</string>
    <string name="unable_to_retrieve_member_information">회원정보를 불러올 수 없습니다.</string>
    <string name="gender">성별</string>
    <string name="success_trading">거래완료하기</string>
    <string name="hint_enter_message">Enter Message</string>
    <string name="user_nickname">%s님의 온도는</string>
    <string name="user_temperature">%s도 입니다.</string>
    <string name="ID_is_not_valid">유효한 아이디가 아닙니다.</string>
    <string name="password_is_not_valid">유효한 비밀번호가 아닙니다.</string>
    <string name="name_is_not_valid">유효한 이름이 아닙니다.</string>
    <string name="phone_is_not_valid">유효한 전화번호가 아닙니다.</string>
    <string name="email_is_not_valid">유효한 이메일이 아닙니다.</string>
    <string name="nickName_is_not_valid">유효한 닉네임이 아닙니다.</string>
    <string name="password_is_not_same">비밀번호와 같지 않습니다,</string>
    <string name="content_rating">상대의 거래온도를 평가해주세요!</string>
    <string name="Submit">제출</string>
    <string name="title_talent_exchange">재능교환</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_home">홈</string>
    <string name="title_profile">프로필</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="write_post">게시물 쓰기</string>
    <string name="loading">로딩중…</string>
    <string name="application_button_text">신청하기</string>
    <string name="check_chattingRoom_text">채팅방 목록 조회하기</string>
    <string name="user_info">사용자 정보</string>
    <string name="popular_exchange_post">이주의 인기 재능교환 게시물</string>
    <string name="popular_community_post">이주의 인기 익명게시판 게시물</string>

    <string-array name="image_options">
        <item>갤러리에서 선택</item>
        <item>기본 이미지로 변경</item>
    </string-array>

    <string-array name="talent_with_all_array">
        <item>All</item>
        <item>IT</item>
        <item>운동</item>
        <item>음악</item>
        <item>어학</item>
    </string-array>

    <string-array name="talent_array">
        <item>IT</item>
        <item>운동</item>
        <item>음악</item>
    </string-array>

</resources>